add store and router

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -21,7 +21,7 @@
   --vt-c-text-dark-1: var(--vt-c-white);
   --vt-c-text-dark-2: rgba(235, 235, 235, 0.64);
 
-  --vt-c-text-url: #FF971D;
+  --vt-c-text-url: #f50 ;
   --vt-c-text-main: #1e1e1e;
 }
 
