--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -5,59 +5,27 @@
   --vt-c-white-mute: #f2f2f2;
   --vt-c-white-grey: #efefef;
 
-  --vt-c-black: #181818;
-  --vt-c-black-soft: #222222;
-  --vt-c-black-mute: #282828;
+  --vt-c-black: #1e1e1e;
+  --vt-c-black-soft: #2c2c2c;
 
-  --vt-c-indigo: #2c3e50;
-
-  --vt-c-divider-light-1: rgba(60, 60, 60, 0.29);
-  --vt-c-divider-light-2: rgba(60, 60, 60, 0.12);
-  --vt-c-divider-dark-1: rgba(84, 84, 84, 0.65);
-  --vt-c-divider-dark-2: rgba(84, 84, 84, 0.48);
-
-  --vt-c-text-light-1: var(--vt-c-indigo);
-  --vt-c-text-light-2: rgba(60, 60, 60, 0.66);
-  --vt-c-text-dark-1: var(--vt-c-white);
-  --vt-c-text-dark-2: rgba(235, 235, 235, 0.64);
-
-  --vt-c-text-url: #f50 ;
-  --vt-c-text-main: #1e1e1e;
+  --vt-c-orange: #f50;
 }
 
 /* semantic color variables for this project */
 :root {
   --color-background: var(--vt-c-white);
-  --color-background-soft: var(--vt-c-white-soft);
-  --color-background-mute: var(--vt-c-white-mute);
+  --color-background-mute: var(--vt-c-white-grey);
 
-  --color-border: var(--vt-c-divider-light-2);
-  --color-border-hover: var(--vt-c-divider-light-1);
 
-  --color-heading: var(--vt-c-text-light-1);
-  --color-text: var(--vt-c-text-main);
-  --color-kodalib: var(--vt-c-text-url);
+
+  --color-text-black: var(--vt-c-black);
+  --color-text-white: var(--vt-c-white);
+  --color-kodalib: var(--vt-c-orange);
 
   --color-nav-button: var(--vt-c-white-grey);
 
   --section-gap: 160px;
 }
-
-/*@media (prefers-color-scheme: dark) {*/
-/*  :root {*/
-/*    --color-background: var(--vt-c-black);*/
-/*    --color-background-soft: var(--vt-c-black-soft);*/
-/*    --color-background-mute: var(--vt-c-black-mute);*/
-
-/*    --color-border: var(--vt-c-divider-dark-2);*/
-/*    --color-border-hover: var(--vt-c-divider-dark-1);*/
-
-/*    --color-heading: var(--vt-c-text-dark-1);*/
-/*    --color-text: var(--vt-c-text-dark-2);*/
-
-/*    --color-nav-button: var(--vt-c-white-grey);*/
-/*  }*/
-/*}*/
 
 *,
 *::before,
